add worker service setting property into program

--- a/ShoppingCartWorkerService/appsettings.json
+++ b/ShoppingCartWorkerService/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "WorkerServiceSetting": {
+    "Interval": 3000,
+    "Username": "msadeqsirjani",
+    "ProductUrl": "https://localhost:7036",
+    "ShoppingCartUrl": "https://localhost:7250"
   }
 }
