add new setting into app setting

--- a/ShoppingCartWorkerService/appsettings.json
+++ b/ShoppingCartWorkerService/appsettings.json
@@ -9,6 +9,10 @@
     "Interval": 3000,
     "Username": "msadeqsirjani",
     "ProductUrl": "https://localhost:7036",
-    "ShoppingCartUrl": "https://localhost:7250"
+    "ShoppingCartUrl": "https://localhost:7250",
+    "IdentityUrl": "https://localhost:7042",
+    "ClientId": "ShoppingCartClient",
+    "ClientSecret": "secret",
+    "Scope": "ShoppingCartAPI"
   }
 }
